# Byte-Heist

./: .djlintrc  .dockerignore  .env  .gitignore  Cargo.toml  Makefile  docker-compose.yml  how_to_add_a_language.md  package-lock.json  package.json  readme.md  tailwind.config.js  vite.config.js  vite.config.mjs
.sqlx/: query-02d67e9febdc6c185b8a91d1117172714c9cb7f38fae0824496c330047d8211f.json  query-031f1f97f498fa9aec7e3392609755e1e9f9a9d3c73c605f4bbe304ca3ec917d.json  query-05480cc2fe6b99bf2c2a2892ef8c6798dc17c40d5105a8deb22efaf4d39d53af.json  query-06098de5b8b587d28a6a1ee7bca91e080a279b5e1255d24264e07af5234b8217.json  query-08fccf29db70e2e418fb0455a621a87bca6cb8903bc6991c3e12cb926f354185.json  query-0a9dcab88e6038e3f262d1cb1e907d8508f085172789e7cf28612e715b525513.json  query-0c6034c91239c817169ec3b3032e7f5ce20e0cb82b1bad09c77ecfeaa8dee7d2.json  query-1697bfeea712d44e2b28d85a9460e92c82f6c7006fb6943ddb59d058b36ddb76.json  query-16cb6fd0065c3ab69c3cd8d7d63d98ffc877dfcb4eeec74eb4d95e01975fff84.json  query-179ddcb2c7bf639460978b93b9d43476511b60f50a5ceee2aee92fc03ffe273b.json  query-17f5748f7e7362f6ab645982f6c63b13451841751aa450b49a1045c8792264cc.json  query-189ef59b4314bd627bb28cb162e018f8a10f3010f1097de24be35138e6839d8f.json  (+162 more)
common/: Cargo.toml
common/src/: achievements.rs  langs.rs  lib.rs  sql_enums.rs  urls.rs
common/src/diff_tools/: mod.rs
common/src/placeholders/: c  nodejs  python  rust
discord-bot/: Cargo.toml
discord-bot/src/: almost_ended_challenge.rs  change_suggestions.rs  checks.rs  lib.rs  new_challenge.rs  queries.rs  webhooks.rs
js/: index.ts  (+13 more)
(+176 files in other folders)
