[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
phf = { version = "0.11.2", features = ["macros", "serde"] }
serde = { version = "1.0.210", features = ["derive"] }
slug = "0.1.6"
strum = { version = "0.27", features = ["derive"] }
sqlx = { version = "0.8.2", optional = true }
similar = { version = "2.6.0", features = ["serde"], optional = true }
itertools = { version = "0.14.0", optional = true }

[lints.clippy]
print_stdout = "deny"

[features]
default = []
sqlx = ["dep:sqlx"]
diff = ["dep:similar", "dep:itertools"]
